--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
@@ -1,7 +1,25 @@
 <tp:includeCA file="Index:showheader" />
 <script type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <script type='text/javascript' src='<{:__PUBLIC__}>/myerp/Xiaoshou/dingdanxinxi.js'></script>
-<style>
+<head>
+ <title>Confirm Before Leave</title>
+ <script language="javascript" type="text/javascript"><!--
+ var pb_strConfirmCloseMessage;
+ var pb_blnCloseWindow = false;
+ pb_strConfirmCloseMessage ="您真的要离开本页吗?";
+ function ConfirmClose() {
+     window.event.returnValue = pb_strConfirmCloseMessage;
+     pb_blnCloseWindow = true;
+ }
+ function ShowConfirmClose(blnValue) {
+     if(blnValue) {
+         document.body.onbeforeunload = ConfirmClose;
+     } else {
+         document.body.onbeforeunload = null;
+     }
+ }
+ //--></script>
+</head><style>
 .tb1 {
 	border-left:1px dashed #CCCCCC;
 	border-bottom:1px dashed #CCCCCC
