--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -384,7 +384,12 @@ function shenhe_after(data,status){
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
-      <php>}}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
+      <php>}}else{</php>
+      <php>if(count(explode('未审核',$v['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
+      <php>if(count(explode('申请',$v['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
+      <php>if(count(explode('财务审核',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
 	  <php>}</php>
       
@@ -457,7 +462,12 @@ function shenhe_after(data,status){
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
-      <php>}}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
+      <php>}}else{</php>
+      <php>if(count(explode('未审核',$v['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
+      <php>if(count(explode('申请',$v['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
+      <php>if(count(explode('财务审核',$v['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
 	  <php>}</php>
       
