--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -7,7 +7,6 @@
     <div id="resultdiv_2" class="resultdiv"></div>
     <tp:includeCA file="Chanpin:header_kongguan" />
     
-    
     <div id="mysearchdiv" style="margin-bottom:10px;">
       <ul id="searchTabs" class="tablist " style="border-top:#4E8CCF">
         <li>应收费用</li>
@@ -36,13 +35,18 @@
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($vol['chanpinID'],'报账项');
       if(false !== $taskom){
-      if(cookie('show_action') == '批准'){
+      	if(cookie('show_action') == '批准'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('检出','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
-      <php>}}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
+      <php>}}else{</php>
+      <php>if(count(explode('未审核',$vol['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
+      <php>if(count(explode('申请',$vol['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
+      <php>if(count(explode('财务审核',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <php>}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$vol['chanpinID']}>,'报账项');">
 	  <php>}</php>
             </td>
@@ -83,13 +87,18 @@
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($vol['chanpinID'],'报账项');
       if(false !== $taskom){
-      if(cookie('show_action') == '批准'){
+      	if(cookie('show_action') == '批准'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('检出','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
-      <php>}}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
+      <php>}}else{</php>
+      <php>if(count(explode('未审核',$vol['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
+      <php>if(count(explode('申请',$vol['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
+      <php>if(count(explode('财务审核',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <php>}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$vol['chanpinID']}>,'报账项');">
 	  <php>}</php>
             </td>
