--- a/Myerp/Tpl/Dijie/djtuanxiangmu.html
+++ b/Myerp/Tpl/Dijie/djtuanxiangmu.html
@@ -40,7 +40,12 @@
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
-      <php>}}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
+      <php>}}else{</php>
+      <php>if(count(explode('未审核',$vol['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
+      <php>if(count(explode('申请',$vol['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
+      <php>if(count(explode('财务审核',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <php>}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$vol['chanpinID']}>,'报账项');">
 	  <php>}</php>
             </td>
@@ -87,7 +92,12 @@
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
-      <php>}}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
+      <php>}}else{</php>
+      <php>if(count(explode('未审核',$vol['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
+      <php>if(count(explode('申请',$vol['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
+      <php>if(count(explode('财务审核',$vol['shenhe_remark'])) > 1) $alterword = '财务已审核通过！！！';</php>
+      <input type="button" value="审核" name="button" onclick="alert('<{$alterword}>')" >
+      <php>}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
       <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
 	  <php>}</php>
             </td>
