--- a/Myerp/Tpl/Chanpin/left_fabu.html
+++ b/Myerp/Tpl/Chanpin/left_fabu.html
@@ -5,9 +5,9 @@
 
   <div id="leftColumn" style="margin-top:7px; width:160px;">
         <ul id="searchTabs" class="tablist tablist_2">
-          <li><a id="shownavtab_1" <php>if($status == '准备' || !$status){</php>class="current"<php>}</php> href="javascript:void(0)" onclick="shownavtab(1)">&nbsp;准备&nbsp;</a></li>
-          <li><a id="shownavtab_2" <php>if($status == '报名'){</php>class="current"<php>}</php> href="javascript:void(0)" onclick="shownavtab(2)">&nbsp;报名&nbsp;</a></li>
-          <li><a id="shownavtab_3" <php>if($status == '截止'){</php>class="current"<php>}</php> href="javascript:void(0)" onclick="shownavtab(3)">&nbsp;截止&nbsp;</a></li>
+          <li><a id="shownavtab_1" <php>if($status == '准备' || !$status){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/index/status/准备" onclick="shownavtab(1)">&nbsp;准备&nbsp;</a></li>
+          <li><a id="shownavtab_2" <php>if($status == '报名'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/index/status/报名" onclick="shownavtab(2)">&nbsp;报名&nbsp;</a></li>
+          <li><a id="shownavtab_3" <php>if($status == '截止'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/index/status/截止" onclick="shownavtab(3)">&nbsp;截止&nbsp;</a></li>
         </ul>
         <div id="navtab_1" class="leftList" <php>if($status != '准备' && $status){</php>style="display:none;"<php>}</php>>
           <h3 style=" text-align:center; border:none">准备中的产品</h3>
