--- a/Myerp/Tpl/Dijie/index.html
+++ b/Myerp/Tpl/Dijie/index.html
@@ -46,8 +46,8 @@
       <tr height="40" class="evenListRowS1">
         <td scope="row" align="left" valign="top"><input value="<{$v['chanpinID']}>" id="chanpinitem<{$i}>" type="checkbox" name="itemlist[]" class="checkboxitem"></td>
         <td scope="row" align="left" valign="top"><{$i+1}></td>
-        <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Dijie/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['tuanhao']}></a></td>
-        <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Dijie/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['title']}></a></td>
+        <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Dijie/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['tuanhao']}></a></td>
+        <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Dijie/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['title']}></a></td>
         <td scope="row" align="left" valign="top"><{$v['fromcompany']}></td>
         <td scope="row" align="left" valign="top"><{$v['lianxiren']}></td>
         <td scope="row" align="left" valign="top"><{$v['lianxirentelnum']}></td>
