--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -141,8 +141,8 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">报账管理</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">提成管理</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/团费确认">团费确认</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/产品搜索">产品搜索（组团）</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/djtuanlist">产品搜索（地接）</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/产品搜索">组团产品</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/djtuanlist">地接产品/a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">统计(绩效)</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">统计(营收)</a> </li>
     </ul>
