--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -128,6 +128,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       </li>
       <li> <a href="<{:SITE_INDEX}>Chanpin/shenhe">产品审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan">产品控管</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Chanpin/danxiangfuwu">单项服务及补账</a> </li>
       <li> <a href="<{:SITE_INDEX}>Xiaoshou/dingdanlist">订单控管</a> </li>
       <li> <a href="<{:SITE_INDEX}>Chanpin/customer">游客管理</a> </li>
     </ul>
@@ -195,7 +196,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
         </ul>
       </li>
       <li> <a href="<{:SITE_INDEX}>Dijie/shenhe">产品审核</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Dijie/danxiangfuwu">单项服务</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Dijie/danxiangfuwu">单项服务及补账</a> </li>
     </ul>
     </span> 
     
