Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -291,8 +291,8 @@
       <td align="left" height="28px" style="min-width:150px; border-left:none">
         <table  border="0" cellspacing="0" cellpadding="0" >
           <tr>
-            <td width="80" align="center" style="border:none; border-right:#000 solid 1px"><{$v['title']}></td>
-            <td  width="70" align="center" style="border:none; border-right:#000 solid 1px"><{$v['value']}></td>
+            <td width="80" align="center" style="border:none; border-right:#000 solid 1px">&nbsp;<{$v['title']}>&nbsp;</td>
+            <td  width="70" align="center" style="border:none; border-right:#000 solid 1px">&nbsp;<{$v['value']}>&nbsp;</td>
           </tr>
         </table>
       </td>
