--- a/Myerp/Tpl/Message/infohistory.html
+++ b/Myerp/Tpl/Message/infohistory.html
@@ -60,7 +60,7 @@
 <script language="javascript"> 
 function dosearch(str)
 {
-		window.location = SITE_INDEX+'Message/index'+str;
+		window.location = SITE_INDEX+'Message/infohistory'+str;
 }
 </script>
 
