--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -1,28 +1,27 @@
 <script type="text/javascript">
-    var SITE_INDEX = '<{:SITE_INDEX}>';
-    var chanpinID = '<{$chanpinID}>';
-	var title =  '<{$datatitle}>';
-	function doshenhe(dotype){
-		ThinkAjax.myloading('resultdiv');
-		var dataID = chanpinID;
-		var datatype = '地接';
-		jQuery.ajax({
-			type:	"POST",
-			url:	SITE_INDEX+"Chanpin/doshenhe",
-			data:	"dataID="+dataID+"&dotype="+dotype+"&datatype="+datatype+"&title="+title,
-			success:function(msg){
-				ThinkAjax.myAjaxResponse(msg,'resultdiv',shenhe_after);
-			}
-		});
-	}
+var SITE_INDEX = '<{:SITE_INDEX}>';
+var chanpinID = '<{$chanpinID}>';
+var title =  '<{$datatitle}>';
+function doshenhe(dotype){
+	ThinkAjax.myloading('resultdiv');
+	var dataID = chanpinID;
+	var datatype = '地接';
+	jQuery.ajax({
+		type:	"POST",
+		url:	SITE_INDEX+"Dijie/doshenhe",
+		data:	"dataID="+dataID+"&dotype="+dotype+"&datatype="+datatype+"&title="+title,
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',shenhe_after);
+		}
+	});
+}
 function shenhe_after(data,status){
 	if(status == 1){
 		alert(data['status_shenhe']+"操作成功！！");
 		location.reload();
 	}
 }
-	
-    </script>
+</script>
 
 <div class="moduleTitle" style="margin-bottom:10px;">
   <h3 style=""><{$navigation}><{$datatitle}></h3>
@@ -106,7 +105,7 @@ function shenhe_after(data,status){
       </php>
       <input type="button" style="float:right" value=" <php>echo cookie('show_word');</php>成团 " name="button" onclick="doshenhe('申请');">
       <php>}}else{</php>
-      <input type="button" style="float:right" value="审核" name="button" onclick="alert('计调未申请审核！！！')" >
+      <input type="button" style="float:right" value="审核" name="button" onclick="alert('已批准成团！！！')" >
       <php>}if(A("Method")->checkshenheback($chanpinID,'地接')){</php>
       <input type="button" style="float:right" value=" 成团回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'地接');">
 	  <php>}</php>
